// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticationService should return a token session 1`] = `
{
  "id": "1234-1234",
  "name": "Foo Token",
  "roles": [],
  "token": "1234",
  "type": "token",
}
`;

exports[`AuthenticationService should return a token session 2`] = `
[
  {
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return a token session 3`] = `
[
  {
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return a token session 4`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "1234",
          "12345",
        ],
      },
    },
  },
]
`;

exports[`AuthenticationService should return a user session 1`] = `
{
  "createdAt": undefined,
  "expiresAt": undefined,
  "id": undefined,
  "roles": [],
  "token": undefined,
  "type": "user",
  "user": {
    "roleIDs": [
      "1111",
      "2222",
    ],
  },
}
`;

exports[`AuthenticationService should return a user session 2`] = `
[
  {
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return a user session 3`] = `
[
  {
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return a user session 4`] = `
[
  {
    "where": {
      "id": {
        "in": [
          "1111",
          "2222",
        ],
      },
    },
  },
]
`;

exports[`AuthenticationService should return a user session 5`] = `
{
  "select": Any<Object>,
  "where": {
    "id": "12345",
  },
}
`;

exports[`AuthenticationService should return null if user can't be found 1`] = `
[
  {
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return null if user can't be found 2`] = `
[
  {
    "where": {
      "token": "1234",
    },
  },
]
`;

exports[`AuthenticationService should return null if user can't be found 3`] = `undefined`;

exports[`AuthenticationService should return null if user can't be found 4`] = `
{
  "select": Any<Object>,
  "where": {
    "id": "12345",
  },
}
`;
